<resources>
    <string name="app_name">My Application</string>
    <string name="main_text">Sensors</string>
    <string name="button_text_ambient">Environment Sensors</string>
    <string name="button_text_motion">Motion Sensors</string>
    <string name="button_text_position">Position Sensors</string>
    <string name="environment_type_text">Environment Sensors Type</string>
    <string name="ambient_temperature_text">Temperature</string>
    <string name="light_text">Light</string>
    <string name="pressure_text">Pressure</string>
    <string name="relative_humidity_text">Humidity</string>
    <string name="temperature_sensor_list_text">Temperature Sensors List</string>
    <string name="temperature_features_text">Temperature Sensor Characteristics</string>
    <string name="temperature_display_text">Temperature Sensor Value</string>
    <string name="light_sensor_list_text">Light Sensors List</string>
    <string name="light_features_text">Light Sensor Characteristics</string>
    <string name="light_display_text">Light Sensor Value</string>
    <string name="pressure_sensor_list_text">Pressure Sensors List</string>
    <string name="pressure_features_text">Pressure Sensor Characteristics</string>
    <string name="pressure_display_text">Pressure Sensor Value</string>
    <string name="humidity_sensor_list_text">Humidity Sensors List</string>
    <string name="humidity_features_text">Humidity Sensor Characteristics</string>
    <string name="humidity_display_text">Humidity Sensor Value</string>
    <string name="motion_type_text">Motion Sensors Type</string>
    <string name="motion_accelerometer_text">Accelerometer</string>
    <string name="motion_gravity_text">Gravity</string>
    <string name="motion_gyroscope_text">Gyroscope</string>
    <string name="motion_linear_acceleration_text">Linear Acceleration</string>
    <string name="accelerometer_sensor_list_text">Accelerometers List</string>
    <string name="accelerometer_features_text">Accelerometer Sensor Characteristics</string>
    <string name="accelerometer_display_text">Accelerometer Sensor Values</string>
    <string name="gravity_sensor_list_text">Gravity Sensors List</string>
    <string name="gravity_features_text">Gravity Sensor Characteristics</string>
    <string name="gravity_display_text">Gravity Sensor Values</string>
    <string name="gyroscope_sensor_list_text">Gyroscope Sensors List</string>
    <string name="gyroscope_features_text">Gyroscope Sensor Characteristics</string>
    <string name="gyroscope_display_text">Gyroscope Sensor Values</string>
    <string name="linear_acceleration_sensor_list_text">Linear Acceleration Sensors List</string>
    <string name="linear_acceleration_features_text">Linear Acceleration Sensor Characteristics</string>
    <string name="linear_acceleration_display_text">Linear Acceleration Sensor Values</string>
    <string name="position_type_text">Position Sensors Type</string>
    <string name="geomagnetic_rotation_text">Geomagnetic Rotation</string>
    <string name="magnetic_field_text">Magnetic Field</string>
    <string name="proximity_text">Proximity</string>
    <string name="geomagnetic_rotation_sensor_list_text">Geomagnetic Rotation Sensors List</string>
    <string name="georotation_features_text">Geomagnetic Rotation Sensor Characteristics</string>
    <string name="georotation_display_text">Geomagnetic Rotation Sensor Values</string>
    <string name="magnetic_field_sensor_list_text">Magnetic Field Sensors List</string>
    <string name="magnetic_field_features_text">Magnetic Field Sensor Characteristics</string>
    <string name="magnetic_field_display_text">Magnetic FIeld Sensor Values</string>
    <string name="proximity_sensor_list_text">Proximity Sensors List</string>
    <string name="proximity_features_text">Proximity Sensor Characteristics</string>
    <string name="proximity_display_text">Proximity Sensor Value</string>
    <string name="safe_button_text">Save Current Value</string>
    <string name="read_button_text">Display Saved Value</string>
    <string name="btn_text_select_saved_value">Display Saved Value by Sensor Type</string>
    <string name="type_sensor_list_text">Sensors Type Selector</string>
    <string name="sensor_type_selector_text">Select Sensor Type:</string>
    <string name="environmental_sensor_name">Environment</string>
    <string name="motion_sensor_name">Motion</string>
    <string name="position_sensor_name">Position</string>
    <string name="environment_selector_text">Select Environment Sensor Type:</string>
    <string name="motion_selector_text">Select Motion Sensor Type</string>
    <string name="position_selector_text">Select Position Sensor Type</string>
    <string name="next_operation_btn_text">Go on</string>
    <string name="view_value_text">Display</string>
    <string name="settings">Settings</string>

    <string name="temperature_number">"Ambient temperature sensor number: "</string>
    <string name="light_number">Ambient light sensor number: </string>
    <string name="pressure_number">Ambient pressure sensor number: </string>
    <string name="humidity_number">Ambient humidity sensor number: </string>
    <string name="accelerometer_number">Accelerometer sensor number: </string>
    <string name="gravity_number">Gravity sensor number: </string>
    <string name="gyroscope_number">Gyroscope sensor number: </string>
    <string name="linear_acceleration_number">Linear acceleration sensor number: </string>
    <string name="georotation_number">Geomagnetic rotation sensor number: </string>
    <string name="magnetic_field_number">Magnetic field sensor number: </string>
    <string name="proximity_number">Proximity sensor number: </string>
    <string name="error_message">"Sorry, there aren't sensors of this type on your device!"</string>
    <string name="name">Sensor name :\u0020 </string>
    <string name="type">Sensor type :\u0020 </string>
    <string name="vendor">Sensor vendor :\u0020</string>
    <string name="version">Sensor version :\u0020</string>
    <string name="resolution">Sensor resolution :\u0020</string>
    <string name="range">Sensor maximum range :\u0020</string>
    <string name="power">Sensor power requirements :\u0020</string>
    <string name="number">Sensor n°\u0020</string>
    <string name="value">\u0020value :\u0020</string>
    <string name="values">\u0020values :\u0020</string>
    <string name="value_x">\u0020value on x axis :\u0020</string>
    <string name="value_y">\u0020value on y axis :\u0020</string>
    <string name="value_z">\u0020value on z axis :\u0020</string>
    <string name="correct_save">"Correctly Saved Value!"</string>
    <string name="choose_type">Make a choice before proceeding!</string>
    <string name="error_display">Sorry, there are no values currently saved for this sensor category!</string>



    <string name="selected_value_display_text">Display Saved Value</string>//uguale a
    read_button_text


    <string name="motion_step_counter_text">Conta Passi</string>
    <string name="step_counter_sensor_list_text">Lista Sensori Conta Passi</string>
    <string name="step_counter_features_text">Caratteristiche Sensore Conta Passi</string>
    <string name="step_counter_display_text">Valore Sensore Conta Passi</string>
    <string name="orientation_text">Orientamento</string>
    <string name="orientation_sensor_list_text">Lista Sensori di Orientamento</string>
    <string name="orientation_features_text">Carattestiche Sensore Orientamento</string>
</resources>