<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/LinearMainSelectSavedValue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/motion_type_text"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motion_selector_text"
        android:textStyle="italic" />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_accelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motion_accelerometer_text" />
        <RadioButton
            android:id="@+id/radio_gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motion_gravity_text" />
        <RadioButton
            android:id="@+id/radio_gyroscope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motion_gyroscope_text" />
        <RadioButton
            android:id="@+id/radio_linear_acceleration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motion_linear_acceleration_text" />
        <RadioButton
            android:id="@+id/radio_step_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motion_step_counter_text" />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_value_text"
        android:onClick="OpenDisplaySelectedValue"/>

</LinearLayout>