<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/LinearMainSelectSavedValue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/position_type_text"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position_selector_text"
        android:textStyle="italic" />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_georotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geomagnetic_rotation_text" />
        <RadioButton
            android:id="@+id/radio_magnetic_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magnetic_field_text" />
        <RadioButton
            android:id="@+id/radio_orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orientation_text" />
        <RadioButton
            android:id="@+id/radio_proximity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proximity_text" />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_value_text"
        android:onClick="OpenDisplaySelectedValue"/>

</LinearLayout>