<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/environment_type_text"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="italic"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambient_temperature_text"
        android:onClick="OpenAmbientTemperatureSensors"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_text"
        android:onClick="OpenLightSensors"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_text"
        android:onClick="OpenPressureSensors"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_humidity_text"
        android:onClick="OpenRelativeHumiditySensors"/>

</LinearLayout>