<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/LinearMainSelectTypeSavedValue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/type_sensor_list_text"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_type_selector_text"
        android:textStyle="italic" />
    <RadioGroup
        android:id="@+id/sensor_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/environmental_sensor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/environmental_sensor_name" />
        <RadioButton
            android:id="@+id/motion_sensor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motion_sensor_name" />
        <RadioButton
            android:id="@+id/position_sensor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position_sensor_name" />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_operation_btn_text"
        android:onClick="OpenDisplaySelectedType"/>

</LinearLayout>