<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/accelerometer_features_text"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/accelerometerfeatureslist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/accelerometer_display_text"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/displayaccelerometervalue"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center_horizontal"
        android:textStyle="italic"/>
    <Button
        android:id ="@+id/save_button"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:onClick ="BtnSafe"
        android:text ="@string/safe_button_text" />
    <Button
        android:id ="@+id/read_button"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:onClick ="BtnRead"
        android:text ="@string/read_button_text" />
    <TextView
        android:id="@+id/accelerometersavedvalue"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center_horizontal"
        android:textStyle="italic"/>

</LinearLayout>