<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/humidity_features_text"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textAllCaps="true"
        android:textSize="22dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/humidityfeatureslist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/humidity_display_text"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textSize="22dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/displayhumidityvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:textStyle="italic"/>
    <Button
        android:id ="@+id/save_button"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_weight="1"
        android:textSize="17dp"
        android:backgroundTint="@color/navy"
        android:onClick ="BtnSafe"
        android:layout_marginBottom="32dp"
        android:text ="@string/safe_button_text" />
    <Button
        android:id ="@+id/read_button"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_weight="1"
        android:textSize="17dp"
        android:backgroundTint="@color/navy"
        android:onClick ="BtnRead"
        android:layout_marginBottom="16dp"
        android:text ="@string/read_button_text" />
    <TextView
        android:id="@+id/humiditysavedvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:textStyle="italic"/>

</LinearLayout>